<resources>
    <string name="app_name">SpČtečka</string>
    <string name="inputHint">Vlož Ean</string>
    <string name="editAmountHint">Vlož Množství</string>
    <string name="cancelButton">Zpět</string>
    <string name="editButton">Změnit</string>
    <string name="deleteButton">Smazat</string>
    <string name="exportButton">Exportovat</string>
    <string name="settingsButton">Nastavení</string>
    <string name="deleteAllButton">Smazat Vše</string>
    <string name="editIpAddressButton">Změnit IP Adresu</string>
    <string name="inputIpAddressHint">Vlož IP Adresu</string>
    <string name="infoLabel">(c) 2018, Michal Trojek</string>



    <string name="versionNumber">Verze: 26</string>


    <string name="start_downloading">Aktualizace databáze</string>
    <string name="start_downloading_text">Probíhá stahování databáze...</string>



    <string name="addAmountButton">Přidat</string>
    <string name="totalAmountTextView">Celkové množství: 0</string>
    <string name="totalEanAmountTextView">Počet titulů: 0</string>
    <string name="currentAmount">Současné množství: 0</string>
    <string name="enterFilenameHint">Vlož název souboru</string>
    <string name="start_loading">Nahrávání dat z databáze</string>
    <string name="start_loading_text">Nahrávám data...</string>

</resources>
